--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <title>Repaso Javascript</title>
 </head>
 <body>
-    <h1>Lista de ejercicios Javascript</h1>
-    <ol>
-        <li><a href="1_palabras_inversas.html">Ejercicio palabras inversas</a></li>
-    </ol>
+    <main>
+        <h1>Lista de ejercicios JavaScript</h1>
+        <p>Ejercicios para practicar JavaScript de diferentes niveles y portales.</p>
+        <ol>
+            <li><a href="1_palabras_inversas.html">Ejercicio Palabras inversas</a></li>
+            <!--<li><a href="shipping_parejas.html">Ejercicio shipping parejas</a></li>-->
+            <li><a href="2_formatear_recetas.html">Ejercicio Formatear recetas para hornear</a></li>
+            <li><a href="3_formatear_term_medico.html">Ejercicio Formatear términos médicos</a></li>
+            <li><a href="4_atravesar_bosque_encantado.html">Ejercicio Atravesar boque encantado</a></li>
+            <li><a href="5_decodificar_mensaje.html">Ejercicio Decodificar mensaje</a></li>
+        </ol>
+    </main>
 </body>
 </html>
